# stonks

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  stocks_dataframe.csv
NLP_Course/: lit.bib  main.tex
data/: preview.csv  stocks_dataframe.csv
notebooks/: asdasd.csv  baseline.ipynb  dataset.ipynb  gym.py  lstm-gym-embeddings.ipynb  moods_lstm.ipynb  news-dataset.ipynb  news-scraping.ipynb  paths.py  regression_stocks_env.py  review-utils.ipynb  self-organizing-fuzzy-network.ipynb  stock-gym.ipynb  stocks-dataset.ipynb  utils.py
report/: main.tex
report_src/: lit.bib  main.tex
