[tool.poetry]
name = "nlpystocks"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.4"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
