[tool.poetry]
name = "nlpystocks"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.4"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
requests = "^2.30.0"
tqdm = "^4.65.0"
scrapy = "^2.9.0"
requests-html = "^0.10.0"
selenium = "^4.9.1"
matplotlib = "^3.7.1"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
