[tool.poetry]
name = "nlpystocks"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.4"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
requests = "^2.30.0"
tqdm = "^4.65.0"
scrapy = "^2.9.0"
requests-html = "^0.10.0"
selenium = "^4.9.1"
matplotlib = "^3.7.1"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
tinkoff-investments = "^0.2.0b57"
python-dotenv = "^1.0.0"
mplfinance = "^0.12.9b7"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
torchinfo = "^1.8.0"
gymnasium = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
